    * use libvbe from vesautils as VESA video driver
    * several fixes for the GGI video output driver
    * fallback to next vo if vo_3dfx failed to init
    * improved XvMC library detection (disabled by default)
    * DPI (Print-Resolution) and Pixel-Aspect support in vo_jpeg
    * ALSA audio output: several small fixes and improvements

    Decoders:
    * Indeo2 (RT21) support via lavc
    * Fraps video decoder via binary DLL
    * support for 8-bit PNGs with palette
    * support for dmb1 MJPEG files with ffmjpeg
    * support for musepack audio (WARNING: when seeking you might get
      ear- and speaker-breaking noises). If you hear clipping, use -af volume.
    * experimental speex support via libspeex
    * On2 VP7 video decoder via binary DLL
    * Duck/On2 TrueMotion2 (TM20) support via lavc
    * support FLX and DTA extensions for flic files
    * QDM2 audio decoding via lavc
    * cook audio decoding via lavc
    * TrueSpeech audio decoding via lavc
    * CamStudio video decoder via lavc
    * hwmpa pass-through MPEG audio codec
    * tremor updated to libogg 1.1.2
    * PNG decoding via libavcodec
    * removed native RealAudio codecs (ported to lavc)
    * Zip Motion-Block Video (ZMB) decoder via binary DLL

    Demuxers:
    * simultaneous audio capture/playback (-tv immediatemode=0) fixed in v4l2
    * PVR support
    * AAC ADTS demuxer
    * libdvdread updated to v0.9.4
    * support for some more MythTV NUV files
    * modularization of demuxer code
    * MPEG in GXF container support with extension-based detection
    * faster MPEG and much faster GXF demuxing
    * more user-friendly demuxer forcing
    * bug fix for lavc WMA v2 decoder, now all files should be playable
    * MPEG Layer 1 and 2 demuxing fixed
    * pass Vorbis extradata from Matroska container properly
    * DVR format support
    * H.264 ES high profile support
    * TV channel cycling
    * DVD subtitle and audio stream mappings fixed
    * fixed RealAudio demuxing